--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{Login}
+  p Welcome to #{title}
   a(href='/') Home
   a(href='/login') Login
   a(href='/signUp') Sign-Up
@@ -11,6 +11,7 @@ block content
   br
   if user === true
           p Welcome back!
+          a(href='/log-out') Log Out!
   else
           form(class="loginForm" method='POST' action="/login" enctype="multipart/form-data")
               div.form-group
