--- a/views/login.pug
+++ b/views/login.pug
@@ -9,16 +9,12 @@ block content
   a(href='/upgradeMember') Upgrade Member Status
   br
   br
-  if user === true
-          p Welcome back!
-          a(href='/log-out') Log Out!
-  else
-          form(class="loginForm" method='POST' action="/login" enctype="multipart/form-data")
-              div.form-group
-              label(for='username')
-              input(type='text', placeholder='Username' name='username' required)
-              div.form-group
-              label(for='password')
-              input(type='text', placeholder='Password' name='password' required)
-              div.form-group
-              button.add-item-button(type='submit') Submit
+  form(class="loginForm" method='POST' action="/login")
+    div.form-group
+    label(for='username')
+    input(type='text', placeholder='Username' name='username' required)
+    div.form-group
+    label(for='password')
+    input(type='text', placeholder='Password' name='password' required)
+    div.form-group
+    button.add-item-button(type='submit') Submit
