--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -7,6 +7,8 @@ block content
   a(href='/upgradeMember') Upgrade Member Status
   br
   br
+  if error
+        h2= error
   form(class="signUpForm" method='POST' action="/signUp")
             div.form-group
             label(for='name')
