--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -7,23 +7,27 @@ block content
   a(href='/upgradeMember') Upgrade Member Status
   br
   br
-  if error
-        h2= error
+  if (errors)
+      each error, index in errors
+          p=error.msg
+  .alert(class="alert-danger", role="alert", id="error-group", style="display: none")
+      ul(id="errors")
+
   form(class="signUpForm" method='POST' action="/signUp")
             div.form-group
             label(for='name')
-            input(type='text' placeholder='Name' name='name' required)
+            input(type='text' placeholder='Name' name='name')
             div.form-group
             label(for='username')
-            input(type='text' placeholder='Username' name='username' required)
+            input(type='text' placeholder='Username' name='username')
             div.form-group
             label(for='email')
-            input(type='text' placeholder='Email' name='email' required)
+            input(type='text' placeholder='Email' name='email')
             div.form-group
             label(for='password')
-            input(type='text' placeholder='Password' name='password' required)
+            input(type='text' placeholder='Password' name='password')
             div.form-group
             label(for='confirmPassword')
-            input(type='text' placeholder='Confirm Password' name='confirmPassword' required)
+            input(type='text' placeholder='Confirm Password' name='confirmPassword')
             div.form-group
             button.add-item-button(type='submit') Submit
