--- a/views/login.pug
+++ b/views/login.pug
@@ -9,6 +9,8 @@ block content
   a(href='/upgradeMember') Upgrade Member Status
   br
   br
+  if msg
+      p= msg
   form(class="loginForm" method='POST' action="/login")
     div.form-group
     label(for='username')
