can now show error messages on login page using passport flash messages, removed useless code, and changed name of upgradeMember page to upgradeStatus

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block content
     a(href='/log-out') Log Out!
   else
     a(href='/login') Login
-  a(href='/upgradeMember') Upgrade Member Status
+  a(href='/upgradeStatus') Upgrade Member Status
   if newMsg
     each message in newMsg
       .message-container
