--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -4,7 +4,7 @@ block content
   h1= title
   a(href='/') Home
   a(href='/login') Login
-  a(href='/upgradeMember') Upgrade Member Status
+  a(href='/upgradeStatus') Upgrade Member Status
   br
   br
   if (errors)
