--- a/views/newMessage.pug
+++ b/views/newMessage.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   a(href='/') Home
-  a(href='/upgradeMember') Upgrade Member Status
+  a(href='/upgradeStatus') Upgrade Member Status
   br
   br
   if user
