--- a/views/upgradeStatus.pug
+++ b/views/upgradeStatus.pug
@@ -9,13 +9,13 @@ block content
     a(href='/log-out') Log Out!
     h2 Become a member
     p As a member you will be able to view the names of authors.
-    form(class="memberForm" method='POST' action="/upgradeMember")
+    form(class="memberForm" method='POST' action="/upgradeStatus/addMember")
         div.form-group
         label(for='memberPasscode')
         input(type='text', placeholder='Passcode' name='memberPasscode' required)
         div.form-group
         button.add-item-button(type='submit') Submit
-    form(class="adminForm" method='POST' action="/upgradeMember")
+    form(class="adminForm" method='POST' action="/upgradeStatus/addAdmin")
         div.form-group
         label(for='adminPasscode')
         input(type='text', placeholder='Passcode' name='adminPasscode' required)
@@ -28,9 +28,9 @@ block content
     a(href='/log-out') Log Out!
     h2 Become a member
     p As a member you will be able to view the names of authors.
-    form(class="memberForm" method='POST' action="/upgradeMember/removeMember")
+    form(class="memberForm" method='POST' action="/upgradeStatus/removeMember")
         button.add-item-button(type='submit' name='removeMember') Remove Member Status
-    form(class="adminForm" method='POST' action="/upgradeMember")
+    form(class="adminForm" method='POST' action="/upgradeStatus/addAdmin")
         div.form-group
         label(for='adminPasscode')
         input(type='text', placeholder='Passcode' name='adminPasscode' required)
@@ -43,13 +43,13 @@ block content
     a(href='/log-out') Log Out!
     h2 Become a member
     p As a member you will be able to view the names of authors.
-    form(class="memberForm" method='POST' action="/upgradeMember")
+    form(class="memberForm" method='POST' action="/upgradeStatus/addMember")
        div.form-group
        label(for='memberPasscode')
        input(type='text', placeholder='Passcode' name='memberPasscode' required)
        div.form-group
        button.add-item-button(type='submit') Submit
-    form(class="adminForm" method='POST' action="/upgradeMember/removeAdmin")
+    form(class="adminForm" method='POST' action="/upgradeStatus/removeAdmin")
        button.add-item-button(type='submit' name='removeAdmin') Remove Admin Status
   if user && user.admin && user.member
     p Upgrade your status #{user.username}!
@@ -58,9 +58,9 @@ block content
     a(href='/log-out') Log Out!
     h2 Become a member
     p As a member you will be able to view the names of authors.
-    form(class="memberForm" method='POST' action="/upgradeMember/removeMember")
+    form(class="memberForm" method='POST' action="/upgradeStatus/removeMember")
        button.add-item-button(type='submit' name='removeMember') Remove Member Status
-    form(class="adminForm" method='POST' action="/upgradeMember/removeAdmin")
+    form(class="adminForm" method='POST' action="/upgradeStatus/removeAdmin")
        button.add-item-button(type='submit' name='removeAdmin') Remove Admin Status
   if !user && !user.admin && !user.member
     a(href='/') Home
