--- a/views/upgradeStatus.pug
+++ b/views/upgradeStatus.pug
@@ -1,68 +1,47 @@
 extends layout
 
 block content
-  h1= title
-  if user && !user.member && !user.admin
-    p Upgrade your status #{user.username}!
-    a(href='/') Home
-    a(href='/newMessage') New Message
-    a(href='/log-out') Log Out!
-    h2 Become a member
-    p As a member you will be able to view the names of authors.
-    form(class="memberForm" method='POST' action="/upgradeStatus/addMember")
+  if user
+    h2 Upgrade your status #{user.username}!
+    p.statusIntroMember As a member you will be able to view the names of authors.
+    p.statusIntroAdmin As an admin you will be able to delete messages.
+    if user && !user.member && !user.admin
+      form(class="memberForm" method='POST' action="/upgradeStatus/addMember")
+          div.form-group
+          label(for='memberPasscode')
+          input(type='text', placeholder='Passcode' name='memberPasscode' required)
+          div.form-group
+          button.add-item-button(type='submit') Submit
+      form(class="adminForm" method='POST' action="/upgradeStatus/addAdmin")
+          div.form-group
+          label(for='adminPasscode')
+          input(type='text', placeholder='Passcode' name='adminPasscode' required)
+          div.form-group
+          button.add-item-button(type='submit') Submit
+    if user && user.member && !user.admin
+      form(class="memberForm" method='POST' action="/upgradeStatus/removeMember")
+          button.add-item-button(type='submit' name='removeMember') Remove Member Status
+      form(class="adminForm" method='POST' action="/upgradeStatus/addAdmin")
+          div.form-group
+          label(for='adminPasscode')
+          input(type='text', placeholder='Passcode' name='adminPasscode' required)
+          div.form-group
+          button.add-item-button(type='submit') Submit
+    if user && user.admin && !user.member
+      form(class="memberForm" method='POST' action="/upgradeStatus/addMember")
         div.form-group
         label(for='memberPasscode')
         input(type='text', placeholder='Passcode' name='memberPasscode' required)
         div.form-group
         button.add-item-button(type='submit') Submit
-    form(class="adminForm" method='POST' action="/upgradeStatus/addAdmin")
-        div.form-group
-        label(for='adminPasscode')
-        input(type='text', placeholder='Passcode' name='adminPasscode' required)
-        div.form-group
-        button.add-item-button(type='submit') Submit
-  if user && user.member && !user.admin
-    p Upgrade your status #{user.username}!
-    a(href='/') Home
-    a(href='/newMessage') New Message
-    a(href='/log-out') Log Out!
-    h2 Become a member
-    p As a member you will be able to view the names of authors.
-    form(class="memberForm" method='POST' action="/upgradeStatus/removeMember")
+      form(class="adminForm" method='POST' action="/upgradeStatus/removeAdmin")
+        button.add-item-button(type='submit' name='removeAdmin') Remove Admin Status
+    if user && user.admin && user.member
+      form(class="memberForm" method='POST' action="/upgradeStatus/removeMember")
         button.add-item-button(type='submit' name='removeMember') Remove Member Status
-    form(class="adminForm" method='POST' action="/upgradeStatus/addAdmin")
-        div.form-group
-        label(for='adminPasscode')
-        input(type='text', placeholder='Passcode' name='adminPasscode' required)
-        div.form-group
-        button.add-item-button(type='submit') Submit
-  if user && user.admin && !user.member
-    p Upgrade your status #{user.username}!
-    a(href='/') Home
-    a(href='/newMessage') New Message
-    a(href='/log-out') Log Out!
-    h2 Become a member
-    p As a member you will be able to view the names of authors.
-    form(class="memberForm" method='POST' action="/upgradeStatus/addMember")
-       div.form-group
-       label(for='memberPasscode')
-       input(type='text', placeholder='Passcode' name='memberPasscode' required)
-       div.form-group
-       button.add-item-button(type='submit') Submit
-    form(class="adminForm" method='POST' action="/upgradeStatus/removeAdmin")
-       button.add-item-button(type='submit' name='removeAdmin') Remove Admin Status
-  if user && user.admin && user.member
-    p Upgrade your status #{user.username}!
-    a(href='/') Home
-    a(href='/newMessage') New Message
-    a(href='/log-out') Log Out!
-    h2 Become a member
-    p As a member you will be able to view the names of authors.
-    form(class="memberForm" method='POST' action="/upgradeStatus/removeMember")
-       button.add-item-button(type='submit' name='removeMember') Remove Member Status
-    form(class="adminForm" method='POST' action="/upgradeStatus/removeAdmin")
-       button.add-item-button(type='submit' name='removeAdmin') Remove Admin Status
-  if !user && !user.admin && !user.member
+      form(class="adminForm" method='POST' action="/upgradeStatus/removeAdmin")
+        button.add-item-button(type='submit' name='removeAdmin') Remove Admin Status
+  if !user
     a(href='/') Home
     a(href='/login') Login
     a(href='/signUp') Sign-Up
