--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,147 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #C880B7;
 }
 
 a {
-  color: #00B7FF;
+  color: #fff;
+  font-size: 20px;
+  margin: .5rem;
+}
+
+h1,h2{
+  font-size: 40px;
+  color: #fff;
+}
+
+/*Layout styles*/
+header{
+  background-color: #9F6BA0;
+  width: 100%;
+  padding: 30px;
+      height:1rem;
+      position:absolute;
+      top:0;
+      left:0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row;
+      flex-wrap: nowrap;
+}
+
+.header-site-title{
+  font-size: 30px;
+}
+
+.header-nav{
+  margin: 2rem;
+}
+
+/*Home styles*/
+.message{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 5rem;
+}
+
+.message-container{
+  border-radius: 1rem;
+  margin: 1rem;
+  background-color: #F5CCE8;
+  padding: .3rem;
+  width: 800px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.msgTopic{
+  color: #606060;
+  font-size: 22px;
+}
+
+.msgText,.msgUser{
+  font-size: 20px;
+}
+
+.details-container{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.details-container > p{
+  margin: 2px;
+}
+
+.userWelcomeMsg{
+  text-align: center;
+  color: #fff;
+  font-size: 1.5rem;
+  margin-top: 5rem;
+  margin-bottom: -3rem;
+}
+/*Login styles*/
+.loginContainer,.msgContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 10px;
+  max-width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  margin-top: 5.5rem;
+}
+
+
+.msgContainer{
+  margin-top: 2.5rem;
+  max-width: 400px;
+  height: 550px;
+}
+
+.loginForm,.msgForm{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.loginTitle,.msgPageTitle{
+  color: #9F6BA0;
+}
+
+.loginForm > input,.msgForm > input,.msgForm > textarea {
+  width: 300px;
+  margin: 1rem 0 2rem 0;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.msgForm > textarea{
+  height:200px;
+}
+
+.loginForm > button, .msgForm > button{
+  border-radius: 20px;
+  border: none;
+  background-color: #9F6BA0;
+  color: #fff;
+  font-size: 1.5rem;
+  padding: .6rem;
+  margin: 0 auto;
+}
+
+.errorsContainer > p{
+font-size: 1rem;
+color: red;
 }
