--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,18 @@
 doctype html
 html
   head
-    title= title
+    title Members Only
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    header
+      .header-title
+        h1.header-site-title Members Only
+      .header-nav
+              if user
+                a(href='/') Home
+                a(href='/newMessage') New Message
+                a(href='/log-out') Log Out
+                a(href='/upgradeStatus') Upgrade Status
+              else
+                a(href='/login') Login
     block content
