--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,8 +10,13 @@ a {
   margin: .5rem;
 }
 
-h1,h2{
+h1{
   font-size: 40px;
+  color: #fff;
+}
+
+h2{
+  font-size: 30px;
   color: #fff;
 }
 
@@ -32,7 +37,8 @@ header{
 }
 
 .header-site-title{
-  font-size: 30px;
+  font-size: 35px;
+  text-decoration: none;
 }
 
 .header-nav{
@@ -85,7 +91,8 @@ header{
   margin-top: 5rem;
   margin-bottom: -3rem;
 }
-/*Login styles*/
+
+/*Login & Message styles*/
 .loginContainer,.msgContainer{
   display: flex;
   justify-content: center;
@@ -101,14 +108,30 @@ header{
   margin-top: 5.5rem;
 }
 
-
 .msgContainer{
   margin-top: 2.5rem;
   max-width: 400px;
   height: 550px;
 }
 
-.loginForm,.msgForm{
+.signUpContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 10px;
+  max-width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  margin-top: 2.5rem;
+  max-width: 600px;
+  height: auto;
+}
+
+
+.loginForm,.msgForm,.signUpForm{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -116,11 +139,15 @@ header{
   flex-wrap: wrap;
 }
 
-.loginTitle,.msgPageTitle{
+.loginTitle,.msgPageTitle,.signUpTitle{
   color: #9F6BA0;
 }
 
-.loginForm > input,.msgForm > input,.msgForm > textarea {
+.signUpTitle{
+  text-align: center;
+}
+
+.loginForm > input,.msgForm > input,.msgForm > textarea,.signUpForm > input {
   width: 300px;
   margin: 1rem 0 2rem 0;
   padding: 10px;
@@ -141,7 +168,73 @@ header{
   margin: 0 auto;
 }
 
-.errorsContainer > p{
+.errorsContainer,.signUpErrors > p{
 font-size: 1rem;
 color: red;
+}
+
+.signUpErrorsContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/*Upgrade Status styles*/
+
+.centerWrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+}
+
+.statusWrapper{
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 10px;
+  max-width: 400px;
+  height: 550px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.statusPageTitle{
+color: #9F6BA0;
+}
+
+.adminForm > input,.memberForm > input{
+font-size: 20px;
+}
+
+.statusContainer{
+display: flex;
+justify-content: center;
+align-items: flex-start;
+flex-direction: column;
+flex-wrap: wrap;
+}
+
+.add-admin-button,.add-member-button,.remove-admin-button,.remove-member-button,.new-user-button{
+background-color: #9F6BA0;
+color: #fff;
+border: none;
+border-radius: 15px;
+padding: 5px;
+margin-top: 10px;
+font-size: 1rem;
+}
+
+.add-admin-button,.add-member-button,.new-user-button{
+  background-color: #9F6BA0;
+}
+
+.new-user-button{
+  font-size: 20px;
+  padding: 10px;
+}
+
+.remove-admin-button,.remove-member-button{
+  background-color: red;
 }
