--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -1,33 +1,29 @@
 extends layout
 
 block content
-  h1= title
-  a(href='/') Home
-  a(href='/login') Login
-  a(href='/upgradeStatus') Upgrade Member Status
-  br
-  br
-  if (errors)
-      each error, index in errors
-          p=error.msg
-  .alert(class="alert-danger", role="alert", id="error-group", style="display: none")
-      ul(id="errors")
+  div.signUpContainer
+    h1.signUpTitle= title
+    div.signUpErrorsContainer
+        if (errors)
+            div.signUpErrors
+                each error, index in errors
+                    p=error.msg
 
-  form(class="signUpForm" method='POST' action="/signUp")
-            div.form-group
-            label(for='name')
-            input(type='text' placeholder='Name' name='name')
-            div.form-group
-            label(for='username')
-            input(type='text' placeholder='Username' name='username')
-            div.form-group
-            label(for='email')
-            input(type='text' placeholder='Email' name='email')
-            div.form-group
-            label(for='password')
-            input(type='text' placeholder='Password' name='password')
-            div.form-group
-            label(for='confirmPassword')
-            input(type='text' placeholder='Confirm Password' name='confirmPassword')
-            div.form-group
-            button.add-item-button(type='submit') Submit
+    form(class="signUpForm" method='POST' action="/signUp")
+                div.form-group
+                label(for='name')
+                input(type='text' placeholder='Name' name='name')
+                div.form-group
+                label(for='username')
+                input(type='text' placeholder='Username' name='username')
+                div.form-group
+                label(for='email')
+                input(type='text' placeholder='Email' name='email')
+                div.form-group
+                label(for='password')
+                input(type='text' placeholder='Password' name='password')
+                div.form-group
+                label(for='confirmPassword')
+                input(type='text' placeholder='Confirm Password' name='confirmPassword')
+                div.form-group
+                button.new-user-button(type='submit') Submit
