--- a/views/newMessage.pug
+++ b/views/newMessage.pug
@@ -8,11 +8,13 @@ block content
         if (errors)
           each error, index in errors
             p=error.msg
-      form(class="msgForm" method='POST' action="/newMessage")
-        div.form-group
-        label(for='title')
-        input(type='text', placeholder='Topic' name='title')
-        div.form-group
-        label(for='message')
-        textarea(placeholder='New Message' name='message')
-        button(type='submit') Submit
+        form(class="msgForm" method='POST' action="/newMessage")
+          div.form-group
+          label(for='title')
+          input(type='text', placeholder='Topic' name='title')
+          div.form-group
+          label(for='message')
+          textarea(placeholder='New Message' name='message')
+          button(type='submit') Submit
+      if !user
+        p.msgNotUser Login to Create a New Message
