--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,18 +2,35 @@ doctype html
 html
   head
     title Members Only
+    meta(name='description', content='Members Only')
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    script(src='https://kit.fontawesome.com/1707487087.js' rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header
       .header-title
         a(href='/').header-site-title Members Only
       .header-nav
-              if user
-                a(href='/') Home
-                a(href='/newMessage') New Message
-                a(href='/log-out') Log Out
-                a(href='/upgradeStatus') Upgrade Status
-              else
-                a(href='/login') Login
-                a(href='/signUp') Sign Up
+          div.hamburgerContainer
+                if user
+                  i.hamburger-menu.fas.fa-bars
+                  .nav
+                    a(href='/') Home
+                    a(href='/newMessage') New Message
+                    a(href='/log-out') Log Out
+                    a(href='/upgradeStatus') Upgrade Status
+                  div.drop-down
+                    i.exit.fas.fa-times
+                    div.links-container
+                      a(href='/') Home
+                      a(href='/newMessage') New Message
+                      a(href='/log-out') Log Out
+                      a(href='/upgradeStatus') Upgrade Status
+                else
+                  a(href='/login') Login
+                  a(href='/signUp') Sign Up
+    script(src='/javascripts/script.js')
     block content
+
