--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -295,10 +295,14 @@ font-size: 1rem;
     flex-wrap: wrap;
   }
 
+  .links-container > a{
+margin: .7rem;
+  }
+
   .exit{
     display: none;
     text-align: end;
-    margin-top: 5rem;
+    margin-top: 7rem;
   }
   
   .nav{
