--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  h1.error-title= 404
+  h2.error-message An Error Occurred
+  p.error-instructions Click on the Site Title to get Back to the Home Page
